@@ -1,3 +1,8 @@
+2012-10-24  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCompCmds.c (TclCompileDictUnsetCmd): Added compilation of
+	the [dict unset] command (for scalar var in LVT only).
+
 2012-10-23  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclInt.h:       Add "flags" parameter from Tcl_LoadFile to
@@ -10,7 +15,7 @@
 
 	* generic/tclBasic.c (TclNRCoroutineObjCmd): insure that numlevels
 	are properly set, fix bug discovered by dkf and reported at
-	http://code.activestate.com/lists/tcl-core/12213/ 
+	http://code.activestate.com/lists/tcl-core/12213/
 
 2012-10-16  Donal K. Fellows  <dkf@users.sf.net>
 
